# agent-ai-lab

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GLOSSARY.md  GOVERNANCE.md  GOVERNANCE_MODEL.md  ISSUE_TEMPLATE.md  MAINTAINERS.md  PULL_REQUEST_TEMPLATE.md  README.md  README.md.bak  README_BACKEND.md  RELEASE_NOTES.md  RELEASE_PROCESS.md  RISK_MODEL.md  ROADMAP.md  SECURITY.md  SECURITY_MODEL.md  SUPPORT.md  SYSTEM_DESIGN.md  create_snapshot_v1.sh  docker-compose.yml  move_architecture_files.sh  nano move_remaining_architecture_files.sh  pyproject.toml  requirements.txt  update_all.sh  update_readme_and_assets.sh
.github/workflows/: ci.yml  coverage.yml  link-check.yml  lint.yml  markdown-lint.yml  security.yml  tests.yml
adr/: 0001-record-architecture-decisions.md  0002-why-12-layer-architecture.md  template.md
docs/: INDEX.md  architecture.md
docs/architecture/: agent-runtime-architecture.md  benchmarking-suites-and-test-scenarios.md  clarification-strategy.md  cognitive-observability-and-meta-reasoning.md  concurrency-and-scheduling.md  cross-layer-dependency-and-contract-model.md  diagram.md  evaluation-pipeline-and-regression-detection.md  execution-and-runtime-performance.md  governance-observability-and-auditability.md  knowledge-integration-model.md  meta-reasoning-model.md  (+14 more)
scripts/: format.sh  run_server.sh  update_docs.py
src/: main.py
tests/: test_agent.py  test_agent_core.py  test_memory.py  test_pipeline.py  test_planning.py  test_tools.py  test_utils.py
(+602 files in other folders)
