[project]
name = "agent-ai-lab"
version = "0.1.0"
description = "Modular AI agent framework for reasoning, planning, and tool execution."
authors = [
    { name = "Andrzej", email = "example@example.com" }
]
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "fastapi",
    "uvicorn",
    "openai>=1.0.0",
    "python-dotenv",
    "pydantic",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["venv", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]
